# nest_climb

./: .gitignore  Cargo.toml
NestClimb/: index.html  package-lock.json  package.json  pwa-assets.config.ts  vite.confif.ts  vite.config.ts
NestClimb/public/assets/levels/: test_level.ldtk
NestClimb/src/wasm/: nest_climb.d.ts  nest_climb.js  nest_climb_bg.wasm.d.ts
assets/levels/: test_level.ldtk
assets/shaders/: custom_material.wgsl  nine_slice.wgsl
raw_assets/test_art/: bird.aseprite
scripts/: web_build.sh
src/: debug.rs  lib.rs  main.rs
src/animation/: animation_components.rs  animation_system.rs
src/background/: parallax.rs  spawn_background.rs  spawn_title_screen.rs
src/collectibles/: collectibles.rs
src/components/: animation_components.rs  animation_timer.rs  player_controls.rs
src/enemies/: damage_player.rs  patrol.rs  spawn_enemy.rs
src/entities/: player.rs
src/flag/: spawn_flag.rs
src/global/: assets.rs  camera.rs  init_libs.rs  inputs.rs  navigation.rs  pause.rs  physics.rs  states.rs  ui.rs
src/health/: health.rs  health_component.rs
src/items/: spawn_collectible.rs  spawn_collectibles.rs  spawn_dead_leaves.rs  spawn_falling_leaf.rs  spawn_feather.rs  spawn_flag.rs  spawn_heart.rs  spawn_ladder.rs  spawn_leaf_generator.rs  spawn_nest.rs  spawn_pendulum.rs  spawn_platform.rs  spawn_platforms.rs  spawn_sawblad.rs  spawn_sawblade.rs  spawn_trampoline.rs
src/map/: ground.rs  map.rs  platform.rs  walls.rs
src/nine_slice/: nine_slice.rs
src/nineslice/: nineslice.rs
src/parallax/: parallax.rs
src/player/: move_player.rs  player_controls.rs  player_entity.rs  spawn_player.rs
src/systems/: animation_system.rs  move_player_system.rs
src/ui/: game_over_ui.rs  general_ui.rs  health.rs  level_select_ui.rs  pause_ui.rs  run_ui.rs  start_ui.rs  transition.rs  ui.rs
