[package]
name = "nest_climb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "0.11"
bevy_ecs_ldtk = { version = "0.8.0", features = [
	"atlas",
], git = "https://github.com/Trouv/bevy_ecs_ldtk.git" }


bevy-tnua = { version = "0.8.0", features = ["rapier_2d", "bevy_rapier2d"] }
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
bevy_rapier2d = { version = "0.22.0", features = [
	"simd-stable",
	"debug-render-2d",
] }
leafwing-input-manager = "0.10.0"
seldom_fn_plugin = "0.4.0"
# smooth-bevy-cameras = "0.8.0"
bevy_egui = "0.21.0"

bevy-ui-navigation = { version = "0.28.0" }
bevy_pkv = { version = "0.8.0", git = "https://github.com/VincentDouchin/bevy_pkv.git" }
# bevy_pkv = { version = "0.7.0", git = "https://github.com/johanhelsing/bevy_pkv.git", branch = "bevy-main", features = [

# bevy-ui-navigation = { version = "0.26.0", git = "https://github.com/VincentDouchin/ui-navigation.git" }
# bevy_mod_ui_texture_atlas_image = "0.4.1"

# bevy-parallax = { git = "https://github.com/VincentDouchin/bevy-parallax.git" }
# bevy_ninepatch = "0.10.0"
bevy_easings = "0.11.1"
rand = "0.8.5"
strum = "0.25.0"
strum_macros = "0.25.1"
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# bevy = { version = "0.11.0", git = "https://github.com/bevyengine/bevy.git" }
# [target.'cfg(target_arch = "windows")'.dependencies]
# bevy = { version = "0.11.0", features = [
# 	"dynamic_linking",
# ], git = "https://github.com/bevyengine/bevy.git" }

[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
