[package]
name = "nest_climb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.11.2" }
bevy_ecs_ldtk = { version = "0.8.0", features = ["atlas"] }
bevy-tnua = { version = "0.9.0", features = ["rapier_2d", "bevy_rapier2d"] }
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
bevy_rapier2d = { version = "0.22.0", features = [
	"simd-stable",
	"debug-render-2d",
] }
leafwing-input-manager = "0.10.0"
seldom_fn_plugin = "0.4.0"
# smooth-bevy-cameras = "0.8.0"
bevy_egui = "0.21.0"

# bevy-ui-navigation = { version = "0.24.0", path = "C:/Users/vince/Documents/dev/Forks/bevy_ui_navigation" }
bevy-ui-navigation = { version = "0.28.0" }
bevy_pkv = "0.8.0"

# bevy-parallax = { git = "https://github.com/VincentDouchin/bevy-parallax.git" }
bevy_easings = "0.11.1"
rand = "0.8.5"
strum = "0.25.0"
strum_macros = "0.25.1"
bevy_tweening = "0.8.0"
bevy_ecs_tilemap = "0.11.0"
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.11.2" }
[target.'cfg(target_arch = "windows")'.dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }

[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
