[package]
name = "nest_climb"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11"
bevy_ecs_ldtk = { version = "0.8.0", features = ["atlas"] }
bevy-tnua = { version = "0.9.0", features = ["rapier_2d", "bevy_rapier2d"] }
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
bevy_rapier2d = { version = "0.22.0", features = [
	"simd-stable",
	"debug-render-2d",
] }
leafwing-input-manager = "0.10.0"
seldom_fn_plugin = "0.4.0"
bevy_egui = "0.21.0"
bevy-ui-navigation = { version = "0.28.0" }
bevy_pkv = { version = "0.8.0", git = "https://github.com/VincentDouchin/bevy_pkv.git" }
# bevy-ui-navigation = { version = "0.26.0", git = "https://github.com/VincentDouchin/ui-navigation.git" }
bevy_easings = "0.11.1"
rand = "0.8.5"
strum = "0.25.0"
bevy_tweening = "0.8.0"
bevy_ecs_tilemap = "0.11.0"
strum_macros = "0.25.1"
bevy_pixel_camera = "0.5.0"
[patch.crates-io]
bevy_ecs_tilemap = { git = "http://github.com/StarArawn/bevy_ecs_tilemap", version = "0.11", branch = "main" }
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# bevy = { version = "0.11.0" }
# [target.'cfg(target_arch = "windows")'.dependencies]
# bevy = { version = "0.11.0", features = [
# 	"dynamic_linking",
# ]}

[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
